--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Nero_development",
     "version": "8.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/app_icon.png",
+    "icon": "./assets/images/logo1.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,6 +13,7 @@
     },
     "android": {
       "package": "nero.indert.com",
+      "permissions": ["INTERNET"],
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/logo1.png",
         "backgroundColor": "#ffffff"
@@ -21,7 +22,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/app_icon.png"
+      "favicon": "./assets/images/logo1.png"
     },
     "plugins": [
       "expo-router",
@@ -44,6 +45,10 @@
       "eas": {
         "projectId": "68c89ab6-6179-4b74-94df-9995fc6c072e"
       }
+    },
+    "updates": {
+      "enabled": true,
+      "fallbackToCacheTimeout": 0
     }
   }
 }
