--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@expo/config-plugins": "~10.0.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.9.0",
@@ -46,11 +47,11 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "^19.0.0",
-    "@types/react-test-renderer": "^19.0.0",
+    "@types/react": "~19.0.10",
+    "@types/react-test-renderer": "19.0.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
-    "react-test-renderer": "18.3.1",
+    "jest-expo": "~53.0.5",
+    "react-test-renderer": "19.0.0",
     "typescript": "^5.3.3"
   },
   "private": true
